textareaの位置をあわせて表示する

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	</head>
 	<body>
 		<p>document before</p>
-		<svg id="xxx" width="900" height="600"></svg>
+		<div id="editableNode"></div>
 		<script src="script.js"></script>
 		<p>document after</p>
 	</body>
