ファイル名変更

--- a/index.html
+++ b/index.html
@@ -3,17 +3,22 @@
 	<head>
 		<meta charset="utf-8">
 		<title>page title</title>
-		<script type="text/javascript" src="d3.v5.5.0.js"></script>
+
 		<style type="text/css">
 			svg {
 				border: 1px solid rgb(26, 8, 8);
 			}
 		</style>
+		<link rel="stylesheet" href="assets/css/EditableNodes.css">
+
+		<script src="assets/js/d3.v5.5.0.js"></script>
+		<script src="assets/js/mousetrap.v1.6.2.js"></script>
+		
 	</head>
 	<body>
 		<p>document before</p>
 		<div id="editableNode"></div>
-		<script src="script.js"></script>
+		<script src="assets/js/EditableNodes.js"></script>
 		<p>document after</p>
 	</body>
 </html>
