--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<title>page title</title>
 
-		<style type="text/css">
+		<style>
 			svg {
 				border: 1px solid rgb(26, 8, 8);
 			}
