--- a/index.html
+++ b/index.html
@@ -6,9 +6,14 @@
 
 		<link rel="stylesheet" href="assets/css/EditableNodes.css">
 
+		<script src="assets/js/jquery-3.3.1.js"></script>
+
+        <script src="assets/js/spectrum-1.8.0.js"></script>
+        <link rel="stylesheet" href="assets/css/spectrum-1.8.0.css" />
+
 		<script src="assets/js/d3.v5.5.0.js"></script>
 		<script src="assets/js/mousetrap.v1.6.2.js"></script>
-		
+
 	</head>
 	<body>
 		<p>document before</p>
