Nodeをファイル吐き出し

--- a/index.html
+++ b/index.html
@@ -4,15 +4,31 @@
 		<meta charset="utf-8">
 		<title>page title</title>
 
-		<link rel="stylesheet" href="assets/css/EditableNodes.css">
+		<!-- <include dependencies>===================================================== -->
 
+		<!-- https://github.com/d3/d3 -->
+		<script src="assets/js/d3.v5.5.0.js"></script>
+
+		<!-- https://jquery.com/ -->
 		<script src="assets/js/jquery-3.3.1.js"></script>
 
+		<!-- https://github.com/ccampbell/mousetrap -->
+		<script src="assets/js/mousetrap.v1.6.2.js"></script>
+
+		<!-- https://github.com/bgrins/spectrum -->
+		<!-- caution depends on jQuery -->
         <script src="assets/js/spectrum-1.8.0.js"></script>
         <link rel="stylesheet" href="assets/css/spectrum-1.8.0.css" />
 
-		<script src="assets/js/d3.v5.5.0.js"></script>
-		<script src="assets/js/mousetrap.v1.6.2.js"></script>
+		<!-- https://github.com/swisnl/jQuery-contextMenu -->
+		<!-- caution depends on jQuery -->
+		<script src="assets/js/jquery.contextMenu-2.7.1.js"></script>
+		<script src="assets/js/jquery.contextMenu-2.7.1-jquery.ui.position.js"></script>
+		<link rel="stylesheet" href="assets/css/jquery.contextMenu-2.7.1.css" />
+
+		<!-- ====================================================</include dependencies> -->
+
+		<link rel="stylesheet" href="assets/css/EditableNodes.css">
 
 	</head>
 	<body>
