change file name

--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
 
 		<!-- ====================================================</include dependencies> -->
 
-		<link rel="stylesheet" href="assets/css/EditableNodes.css">
+		<link rel="stylesheet" href="assets/css/force-layout-memo.css">
 
 	</head>
 	<body>
 		<p>document before</p>
 		<div id="editableNode"></div>
-		<script src="assets/js/EditableNodes.js"></script>
+		<script src="assets/js/force-layout-memo.js"></script>
 		<p>document after</p>
 	</body>
 </html>
