change file name

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	</head>
 	<body>
 		<p>document before</p>
-		<div id="editableNode"></div>
+		<div id="force-layout-memo"></div>
 		<script src="assets/js/force-layout-memo.js"></script>
 		<p>document after</p>
 	</body>
