--- a/index.html
+++ b/index.html
@@ -4,6 +4,18 @@
 		<meta charset="utf-8">
 		<title>page title</title>
 
+		<style type="text/css">
+			#force-memo0 {
+				width: 100%;
+    			height: 800px;
+			}
+
+			#force-memo1 {
+				width: 100%;
+    			height: 800px;
+			}
+		</style>
+
 		<!-- <include dependencies>===================================================== -->
 
 		<!-- https://github.com/d3/d3 -->
@@ -29,12 +41,26 @@
 		<!-- ====================================================</include dependencies> -->
 
 		<link rel="stylesheet" href="assets/css/force-layout-memo.css">
+		<script src="assets/js/force-layout-memo.js"></script>
 
 	</head>
 	<body>
 		<p>document before</p>
-		<div id="force-layout-memo"></div>
-		<script src="assets/js/force-layout-memo.js"></script>
+		<div id="force-memo0"></div>
+		<script>
+			var memo0 = new forceLayoutMemo({
+				elemIdNameToBind:"force-memo0",
+				// componentPath:"assets/js/force-layout-memo_compo.html"
+			});
+		</script>
+		<p>document middle</p>
+		<div id="force-memo1"></div>
+		<script>
+			var memo1 = new forceLayoutMemo({
+				elemIdNameToBind:"force-memo1",
+				// componentPath:"assets/js/force-layout-memo_compo.html"
+			});
+		</script>
 		<p>document after</p>
 	</body>
 </html>
