--- a/edit_two.html
+++ b/edit_two.html
@@ -5,18 +5,14 @@
 		<title>page title</title>
 
 		<style type="text/css">
-			html, body {
-				margin: 0;
-				border: 0;
-				padding: 0;
-				height: 100%;
-			}
 			#force-memo0 {
-				margin: 0;
-				border: 0;
-				padding: 0;
 				width: 100%;
-    			height: 100%;
+    			height: 800px;
+			}
+
+			#force-memo1 {
+				width: 100%;
+    			height: 800px;
 			}
 		</style>
 
@@ -49,11 +45,23 @@
 
 	</head>
 	<body>
+		<p>document before</p>
 		<div id="force-memo0"></div>
 		<script>
 			var memo0 = new forceLayoutMemo({
 				elemIdNameToBind:"force-memo0",
+				// componentPath:"assets/js/force-layout-memo_compo.html"
 			});
 		</script>
+		<p>document middle</p>
+		<div id="force-memo1"></div>
+		<script>
+			var memo1 = new forceLayoutMemo({
+				elemIdNameToBind:"force-memo1",
+				// componentPath:"assets/js/force-layout-memo_compo.html"
+			});
+			memo1.loadFile("tester files/1 basics/4 nodes, 3 links.json");
+		</script>
+		<p>document after</p>
 	</body>
 </html>
