--- a/index.html
+++ b/index.html
@@ -5,14 +5,18 @@
 		<title>page title</title>
 
 		<style type="text/css">
-			#force-memo0 {
-				width: 100%;
-    			height: 800px;
+			html, body {
+				margin: 0;
+				border: 0;
+				padding: 0;
+				height: 100%;
 			}
-
-			#force-memo1 {
+			#force-memo0 {
+				margin: 0;
+				border: 0;
+				padding: 0;
 				width: 100%;
-    			height: 800px;
+    			height: 100%;
 			}
 		</style>
 
@@ -45,23 +49,11 @@
 
 	</head>
 	<body>
-		<p>document before</p>
 		<div id="force-memo0"></div>
 		<script>
 			var memo0 = new forceLayoutMemo({
 				elemIdNameToBind:"force-memo0",
-				// componentPath:"assets/js/force-layout-memo_compo.html"
 			});
 		</script>
-		<p>document middle</p>
-		<div id="force-memo1"></div>
-		<script>
-			var memo1 = new forceLayoutMemo({
-				elemIdNameToBind:"force-memo1",
-				// componentPath:"assets/js/force-layout-memo_compo.html"
-			});
-			memo1.loadFile("tester files/1 basics/4 nodes, 3 links.json");
-		</script>
-		<p>document after</p>
 	</body>
 </html>
