viz.js バージョンを明記

--- a/edit_two.html
+++ b/edit_two.html
@@ -38,6 +38,9 @@
 		<script src="assets/js/jquery.contextMenu-2.7.1-jquery.ui.position.js"></script>
 		<link rel="stylesheet" href="assets/css/jquery.contextMenu-2.7.1.css" />
 
+		<!-- https://github.com/mdaines/viz.js -->
+		<script src="assets/js/viz-v1.8.1.js"></script>
+
 		<!-- ==========================</include dependencies for force-layout-memo.js> -->
 
 		<link rel="stylesheet" href="assets/css/force-layout-memo.css">
