--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 		<link rel="stylesheet" href="assets/css/jquery.contextMenu-2.7.1.css" />
 
 		<!-- https://github.com/mdaines/viz.js -->
-		<script src="assets/js/viz.js"></script>
+		<script src="assets/js/viz-v1.8.1.js"></script>
 
 		<!-- ==========================</include dependencies for force-layout-memo.js> -->
 
