--- a/javascript parsing/viz-v1.8.1/index.html
+++ b/javascript parsing/viz-v1.8.1/index.html
@@ -34,7 +34,7 @@ try {
 </div>
 <div id="svg-draw"></div>
 <script src="esgraph_browserify.js"></script>
-<script src="viz.js"></script>
+<script src="viz-v1.8.1.js"></script>
 <script>
     function inspect(s) {
         return "<pre>" + s.replace(/</g, "&lt;").replace(/>/g, "&gt;").replace(/\"/g, "&quot;") + "</pre>"
@@ -55,15 +55,15 @@ try {
     }
 
     function convert() {
-        // var source = document.getElementById("js-code-text").value;
-        // if (source.length == 0) {
-        //     return;
-        // }
-        // dotCode = esgraph(source);
+        var source = document.getElementById("js-code-text").value;
+        if (source.length == 0) {
+            return;
+        }
+        dotCode = esgraph(source);
         
-        // document.getElementById("dot-code-text").value = dotCode;
+        document.getElementById("dot-code-text").value = dotCode;
 
-        dotCode = document.getElementById("dot-code-text").value;
+        // dotCode = document.getElementById("dot-code-text").value;
 
         var svgElement = createFromDot(dotCode, "svg");
         document.getElementById("svg-draw").innerHTML = svgElement;
