get log ln chrome

--- a/edit_two.html
+++ b/edit_two.html
@@ -63,7 +63,7 @@
 				elemIdNameToBind:"force-memo1",
 				// componentPath:"assets/js/force-layout-memo_compo.html"
 			});
-			memo1.loadFile("tester files/1 basics/4 nodes, 3 links.json");
+			memo1.loadFile("tester/1 basics/4 nodes, 3 links.json");
 		</script>
 		<p>document after</p>
 	</body>
