--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 		<script>
 			var memo0 = new forceLayoutMemo({
 				elemIdNameToBind:"force-memo0",
+				debugMode:true,
 			});
 		</script>
 	</body>
